[package]
name = "keystr-rs"
version = "0.1.0"
edition = "2021"
description = "An application for managing Nostr keys. Written in Rust, with simple UI (Iced)."
homepage = "https://github.com/keystr/keystr-rs"
repository = "https://github.com/keystr/keystr-rs.git"
license = "MIT"
readme = "README.md"
rust-version = "1.67.0"
keywords = ["nostr", "nip-26",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
hex = "0.4.3"
iced = "0.7.0"
nostr = "0.18.1"
readonly = "0.2.3"
serde_json = "1.0.93"
thiserror = "1.0"
